improvements on tutorial

--- a/doc/tutorial/README.Rmd
+++ b/doc/tutorial/README.Rmd
@@ -1,6 +1,29 @@
 Tutorial
 ========
 
+Quick start
+-----------
+
+A simple stratified cross-validation of the *linear discriminant analysis* with **mlr**.
+```{r}
+library(mlr)
+data(iris)
+# Define the Task:
+tsk = makeClassifTask(id = "tutorial", data = iris, target = "Species")
+# Define the Learner:
+lrn = makeLearner("classif.lda")
+# Define the Resampling Strategy:
+rsm = makeResampleDesc(method = "CV", stratify = TRUE)
+# Do the resampling:
+res = resample(learner = lrn, task = tsk, resampling = rsm, show.info = FALSE)
+# Get the mean misclassification error:
+res$aggr
+```
+Datails for each step can be found in the following tutorial chapters.
+
+Content
+-------
+
 1. [Learning tasks](task.md)
 2. [Learners](learner.md)
 3. [Training a learner](train.md)
