--- a/doc/tutorial/predict.Rmd
+++ b/doc/tutorial/predict.Rmd
@@ -1,9 +1,8 @@
 Predicting Outcomes for New Data
 ================================
 
-This section is pretty straightforward and - as you might have guessed
-- deals with predicting target values for new observations. It is
-implemented the same way as most of the other predict methods in R, i.e. just 
+Predicting the target values for new observations is
+implemented the same way as most of the other predict methods in *R*, i.e. just 
 call [predict](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html) on the object returned by [train](http://berndbischl.github.io/mlr/man/train.html) and pass the data to be predicted.
 
 
@@ -66,7 +65,7 @@ the predict type, which was set when generating the [Learner](http://berndbischl
 class labels are predicted.
 
 We start again by loading **mlr** and creating a classification task for the 
-iris dataset. We select two subsets of the data. We train a decision tree on the
+iris data set. We select two subsets of the data. We train a decision tree on the
 first one and [predict](http://berndbischl.github.io/mlr/man/predict.WrappedModel.html) the class labels on the test set.
 
 ```{r}
@@ -86,24 +85,24 @@ test.set = seq(from = 2, to = nrow(iris), by = 2)
 mod = train(lrn, task, subset = training.set)
 
 # Finally, to predict the outcome on new values, we use the predict method:
-pred = predict(mod, newdata = iris[test.set,])
+pred = predict(mod, newdata = iris, subset = test.set)
 ``` 
 
-A data frame that contains the true and predicted class labels can be accessed via
+A `data.frame` that contains the true and predicted class labels can be accessed via
 
 ```{r}
 head(pred$data)
 ```
 
-Alternatively, we can also predict directly from a task:
+Alternatively, we can also predict directly from a `task`:
 
 ```{r}
 pred = predict(mod, task = task, subset = test.set)
 head(as.data.frame(pred))
 ``` 
 
-When predicting from a task, the resulting data frame contains an additional column, 
-called ID, which tells us for which element in the original data set the prediction 
+When predicting from a `task`, the resulting `data.frame` contains an additional column, 
+called *ID*, which tells us for which element in the original data set the prediction 
 is done. 
 (In the iris example the IDs and the rownames coincide.)
 
@@ -113,7 +112,7 @@ of the learner.
 ```{r}
 lrn = makeLearner("classif.rpart", predict.type = "prob")
 mod = train(lrn, task)
-pred = predict(mod, newdata = iris[test.set,])
+pred = predict(mod, newdata = iris, subset = test.set)
 head(pred$data)
 ``` 
 
@@ -135,10 +134,9 @@ we can specify a positive class when generating the task. Moreover, we can set t
 threshold value that is used to assign class labels based on the predicted 
 posteriors.
 
-To illustrate binary classification we use the Sonar dataset from the
-[mlbench](http://cran.r-project.org/web/packages/mlbench/index.html) package. Again, we create a classification task and a learner, which 
-predicts probabilities, train the learner and then predict the class labels.
-
+To illustrate binary classification we use the Sonar data set from the
+[mlbench](http://cran.r-project.org/web/packages/mlbench/index.html) package. 
+Again, we create a classification task and a learner, which predicts probabilities, train the learner and then predict the class labels.
 
 ```{r}
 library("mlbench")
@@ -180,8 +178,7 @@ test.set = seq(from = 2, to = nrow(BostonHousing), by = 2)
 lrn = makeLearner("regr.gbm", n.trees = 100)
 mod = train(lrn, task, subset = training.set) 
 
-pred = predict(mod, newdata = BostonHousing[test.set,])
+pred = predict(mod, newdata = BostonHousing, subset = test.set)
 
 head(pred$data)
 ```
-
