--- a/NEWS
+++ b/NEWS
@@ -31,7 +31,7 @@ mlr_2.1:
 -- tuneParamsMultiCrit
 -- makeTuneMultiCritControlGrid, makeTuneMultiCritControlRandom, makeTuneMultiCritControlNSGA2
 -- plotTuneMultiCritResult 
--- getFailuremodelMsg
+-- getFailureModelMsg
 
 mlr_2.0:
 - mlr now supports survival analysis models (experimental)
