docs: integarted learners

--- a/doc/integrated_learners.Rmd
+++ b/doc/integrated_learners.Rmd
@@ -5,7 +5,7 @@ library(xtable)
 
 createPackageLink = function(p) {
   if (p %nin% "stats") 
-    sprintf("`<a href = 'http://cran.r-project.org/web/packages/%s/index.html'>%s</a>", p, p)
+    sprintf("[%s](http://cran.r-project.org/web/packages/%s/index.html)", p, p)
   else 
     p
 }
@@ -19,66 +19,49 @@ convBool = function(x) {
   ifelse(x, "X", "")
 }
 
-printCell = function(s, align = "center", width = 5) {
-  w = if (is.null(width)) "" else paste0('width="', width, '%"')
-  cat(paste0('<td ', w, ' align="', align, '">', s, '</td>\n'))
+printCell = function(s) {
+  catf("| %s ", s, newline = FALSE)
 }
 
-printCellHeader = function(s, align = "center") {
-  catf("<th align=\"%s\">%s</th>", align, s)
+printHeader = function(cn) {
+  s = if (cn %in% c("Id", "Name", "Short", "Note")) ":---:"  else  ":---:"
+  catf("| %s", newline = FALSE, s)
 }
 
-printHeader = function() {
-  catf("<tr>")
-  printCellHeader("Id", align = "left")
-  printCellHeader("Name", align = "left")
-  printCellHeader("Short", align = "left")
-  printCellHeader("Packages", align = "left")
-  printCellHeader("prob / se ")
-  printCellHeader("Num.")
-  printCellHeader("Fact.")
-  printCellHeader("NAs")
-  printCellHeader("Weights")
-  printCellHeader("Further")
-  printCellHeader("Note")
-  catf("</tr>")
-}
-    
 printLine = function() {
-  catf("<tr><td colspan=12><hr></td></tr>")
+#  catf("<tr><td colspan=12><hr></td></tr>")
 }
 
-printLearnersTab = function(type) {
-  lrns = listLearners(type, create = TRUE)
-
-  cat('<table cellpadding=2>\n')
-  printHeader()
+printLearnersTab = function() {
+  lrns = listLearners(create = TRUE)
+  cns = c("Id", "Name", "Short", "Packages", "prob / se ", "Num.", "Fact.", "NAs", "Weights", 
+    "Further", "Note")
+  lapply(cns, printCell); catf("|")
+  lapply(cns, printHeader); catf("|")
   old = list(type = "classif")
   for (x in lrns) {
     if (old$type != x$type)
       printLine()
     fprops = setdiff(x$properties, c("prob", "se", "numerics", "factors", "missings", "weights"))
-    catf("<tr>")
-    printCell(x$id, align = "left", width = 5)
-    printCell(x$name, align = "left", 10)
-    printCell(x$short.name, align = "left", width = 5)
-    printCell(createPackagesLinks(x$package), align = "left", width = 5)
-    printCell(convBool(any(hasProperties(x, c("prob", "se")))), width = 3)
-    printCell(convBool(hasProperties(x, "numerics")), width = 3)
-    printCell(convBool(hasProperties(x, "factors")), width = 3)
-    printCell(convBool(hasProperties(x, "missings")), width = 3)
-    printCell(convBool(hasProperties(x, "weights")), width = 3)
-    printCell(collapse(fprops), width = 5)
-    printCell(x$note, align = "left", width = 55)
-    catf("</tr>")
+    printCell(x$id)
+    printCell(x$name)
+    printCell(x$short.name)
+    printCell(createPackagesLinks(x$package))
+    printCell(convBool(any(hasProperties(x, c("prob", "se")))))
+    printCell(convBool(hasProperties(x, "numerics")))
+    printCell(convBool(hasProperties(x, "factors")))
+    printCell(convBool(hasProperties(x, "missings")))
+    printCell(convBool(hasProperties(x, "weights")))
+    printCell(collapse(fprops))
+    printCell(x$note)
+    catf("|")
     old = x
   }
-  catf("</table>")
 }
 ``` 
 
 ```{r echo=FALSE,results='asis'}
-printLearnersTab(NA_character_)
+printLearnersTab()
 ``` 
 
 
