hack for conflicting function names :(

--- a/tutorial/src/performance.Rmd
+++ b/tutorial/src/performance.Rmd
@@ -96,8 +96,7 @@ model on a training set and calculate the mean of squared errors and the mean of
 absolute errors on the test data set.
 
 ```{r}
-library(mlbench)
-data(BostonHousing)
+data(BostonHousing, package = "mlbench")
 
 task = makeRegrTask(data = BostonHousing, target = "medv")
 
